--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "install": "cd server && npm i && cd ../client && npm i",
     "heroku-postbuild": "npm run install && num run build",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client/src && npm start\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
