--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ node_modules
 /coverage
 
 # production
-/build
+# /build
 
 # misc
 .DS_Store
@@ -19,5 +19,3 @@ node_modules
 .env.production.local
 
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
