--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "bugs": {
     "url": "https://github.com/MuboHouston/react-portfolio/issues"
   },
-  "homepage": "https://github.com/MuboHouston/react-portfolio#readme",
+  // "homepage": "https://github.com/MuboHouston/react-portfolio#readme",
   "devDependencies": {
     "concurrently": "^7.2.1"
   }
